base/applications/sabnzbd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sabnzbd
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
