base/applications/sabnzbd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: sabnzbd
spec:
  ingressClassName: tailscale
  rules:
  - host: sabnzbd
    http:
      paths:
      - backend:
          service:
            name: sabnzbd
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sabnzbd
